-Fixed overflow issue

--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -133,6 +133,10 @@
   font-display: fallback;
 }
 
+#__nuxt {
+  overflow-x: hidden;
+}
+
 .page-enter-active,
 .page-leave-active {
   transition: all 0.5s;
